优化了一部分代码